# JobScraping

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/test_project/: addition.py
